--- a/core/bus_center/BUILD.gn
+++ b/core/bus_center/BUILD.gn
@@ -85,10 +85,10 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/adapter:softbus_adapter",
         "$dsoftbus_root_path/core/adapter/bus_center:softbus_adapter_bus_center",
         "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
-        "$dsoftbus_root_path/core/common:dsoftbus_utils",
+        "$dsoftbus_root_path/core/common:softbus_utils",
+        "$dsoftbus_root_path/core/connection:conn_manager",
         "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
         "$dsoftbus_root_path/core/frame/small/client_manager:client_manager",
-        "$dsoftbus_root_path/core/connection:conn_manager",
         "$hilog_lite_deps_path",
         "lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
         "lnn/net_ledger:dsoftbus_bus_center_ledger",
@@ -150,12 +150,12 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/adapter/bus_center:softbus_adapter_bus_center",
       "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
-      "$dsoftbus_root_path/core/common:dsoftbus_utils",
+      "$dsoftbus_root_path/core/common:softbus_utils",
+      "$dsoftbus_root_path/core/connection:conn_manager",
       "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
       "$dsoftbus_root_path/core/frame/standard/client_manager:client_manager",
       "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
       "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
-      "$dsoftbus_root_path/core/connection:conn_manager",
       "lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
       "lnn/net_ledger:dsoftbus_bus_center_ledger",
       "monitor:dsoftbus_bus_center_monitor",
