--- a/core/bus_center/utils/BUILD.gn
+++ b/core/bus_center/utils/BUILD.gn
@@ -52,7 +52,7 @@ if (defined(ohos_lite)) {
       public_configs = [ ":bus_center_utils_interface" ]
       deps = [
         "$dsoftbus_root_path/adapter:softbus_adapter",
-        "$dsoftbus_root_path/core/common:dsoftbus_utils",
+        "$dsoftbus_root_path/core/common:softbus_utils",
         "$hilog_lite_deps_path",
         "//third_party/bounds_checking_function:libsec_shared",
       ]
@@ -79,7 +79,7 @@ if (defined(ohos_lite)) {
     public_configs = [ ":bus_center_utils_interface" ]
     deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
-      "$dsoftbus_root_path/core/common:dsoftbus_utils",
+      "$dsoftbus_root_path/core/common:softbus_utils",
       "//utils/native/base:utils",
     ]
     if (is_standard_system) {
