--- a/core/frame/standard/init/BUILD.gn
+++ b/core/frame/standard/init/BUILD.gn
@@ -55,7 +55,7 @@ ohos_source_set("softbus_server") {
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
     "$dsoftbus_root_path/core/bus_center:dsoftbus_bus_center_server",
-    "$dsoftbus_root_path/core/common:dsoftbus_utils",
+    "$dsoftbus_root_path/core/common:softbus_utils",
     "$dsoftbus_root_path/core/connection:conn_manager",
     "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
     "$dsoftbus_root_path/core/frame/standard/client_manager:client_manager",
