--- a/sdk/transmission/trans_channel/udp/BUILD.gn
+++ b/sdk/transmission/trans_channel/udp/BUILD.gn
@@ -34,7 +34,7 @@ if (defined(ohos_lite)) {
   if (enable_trans_udp == true) {
     common_deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
-      "$dsoftbus_root_path/core/common:dsoftbus_utils",
+      "$dsoftbus_root_path/core/common:softbus_utils",
       "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
       "$hilog_lite_deps_path",
     ]
@@ -120,7 +120,7 @@ if (defined(ohos_lite)) {
       deps = [
         "$dsoftbus_root_path/adapter:softbus_adapter",
         "$dsoftbus_root_path/components/nstackx_enhanced:nstackx",
-        "$dsoftbus_root_path/core/common:dsoftbus_utils",
+        "$dsoftbus_root_path/core/common:softbus_utils",
         "$dsoftbus_root_path/core/connection/common:conn_common",
         "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
         "//utils/native/base:utilsecurec_shared",
