--- a/components/nstackx/nstackx_ctrl/BUILD.gn
+++ b/components/nstackx/nstackx_ctrl/BUILD.gn
@@ -18,7 +18,7 @@ if (defined(ohos_lite)) {
   config("dfinder_interface") {
     include_dirs = [ "interface" ]
   }
-  source_set("nstackx_ctrl") {
+  shared_library("nstackx_ctrl") {
     sources = [
       "core/coap_discover/coap_app.c",
       "core/coap_discover/coap_client.c",
@@ -50,9 +50,6 @@ if (defined(ohos_lite)) {
       "-Wall",
       "-fPIC",
       "-std=c99",
-      "-ffunction-sections",
-      "-fdata-sections",
-      "-Os",
     ]
     cflags_cc = cflags
     ldflags = [ "-fPIC" ]
