--- a/core/authentication/BUILD.gn
+++ b/core/authentication/BUILD.gn
@@ -74,7 +74,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
       "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
-      "$dsoftbus_root_path/core/common:dsoftbus_utils",
+      "$dsoftbus_root_path/core/common:softbus_utils",
       "$dsoftbus_root_path/core/connection/tcp:tcp_connection",
       "$hichain_deps",
       "$hilog_lite_deps_path",
@@ -107,9 +107,9 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
       "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
-      "$dsoftbus_root_path/core/common:dsoftbus_utils",
-      "$dsoftbus_root_path/core/connection/common:conn_common",
+      "$dsoftbus_root_path/core/common:softbus_utils",
       "$dsoftbus_root_path/core/connection:conn_manager",
+      "$dsoftbus_root_path/core/connection/common:conn_common",
     ]
     if (is_standard_system) {
       external_deps = [
