--- a/core/connection/common/BUILD.gn
+++ b/core/connection/common/BUILD.gn
@@ -38,7 +38,7 @@ if (defined(ohos_lite)) {
         "src/softbus_thread_pool.c",
       ]
       deps = [
-        "$dsoftbus_root_path/core/common:dsoftbus_utils",
+        "$dsoftbus_root_path/core/common:softbus_utils",
         "$hilog_lite_deps_path",
       ]
     }
@@ -65,7 +65,7 @@ if (defined(ohos_lite)) {
       ]
       deps = [
         "$dsoftbus_root_path/adapter:softbus_adapter",
-        "$dsoftbus_root_path/core/common:dsoftbus_utils",
+        "$dsoftbus_root_path/core/common:softbus_utils",
         "$hilog_lite_deps_path",
         "$libsec_deps_path",
       ]
@@ -88,7 +88,7 @@ if (defined(ohos_lite)) {
     ]
     public_deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
-      "$dsoftbus_root_path/core/common:dsoftbus_utils",
+      "$dsoftbus_root_path/core/common:softbus_utils",
       "//utils/native/base:utilsecurec_shared",
     ]
     if (is_standard_system) {
