--- a/core/connection/tcp/BUILD.gn
+++ b/core/connection/tcp/BUILD.gn
@@ -38,7 +38,7 @@ if (defined(ohos_lite)) {
       ]
       deps = [
         "$dsoftbus_root_path/adapter:softbus_adapter",
-        "$dsoftbus_root_path/core/common:dsoftbus_utils",
+        "$dsoftbus_root_path/core/common:softbus_utils",
         "$dsoftbus_root_path/core/connection/common:conn_common",
         "$hilog_lite_deps_path",
       ]
@@ -65,7 +65,7 @@ if (defined(ohos_lite)) {
       ]
       deps = [
         "$dsoftbus_root_path/adapter:softbus_adapter",
-        "$dsoftbus_root_path/core/common:dsoftbus_utils",
+        "$dsoftbus_root_path/core/common:softbus_utils",
         "$dsoftbus_root_path/core/connection/common:conn_common",
         "$hilog_lite_deps_path",
         "$libsec_deps_path",
@@ -94,7 +94,7 @@ if (defined(ohos_lite)) {
     ]
     deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
-      "$dsoftbus_root_path/core/common:dsoftbus_utils",
+      "$dsoftbus_root_path/core/common:softbus_utils",
       "$dsoftbus_root_path/core/connection/common:conn_common",
     ]
     if (is_standard_system) {
