--- a/core/frame/small/client_manager/BUILD.gn
+++ b/core/frame/small/client_manager/BUILD.gn
@@ -37,7 +37,7 @@ source_set("client_manager") {
   ]
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
-    "$dsoftbus_root_path/core/common:dsoftbus_utils",
+    "$dsoftbus_root_path/core/common:softbus_utils",
     "$hilog_lite_deps_path",
     "//third_party/bounds_checking_function:libsec_shared",
   ]
