--- a/core/transmission/BUILD.gn
+++ b/core/transmission/BUILD.gn
@@ -17,9 +17,11 @@ config("trans_session_interface") {
   include_dirs = [
     "$dsoftbus_root_path/core/transmission/session/include",
     "$dsoftbus_root_path/core/authentication/interface",
+    "$dsoftbus_root_path/core/transmission/common/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/auth/include",
     "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/interfaces/kits/transport",
   ]
 }
 
@@ -54,7 +56,7 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/core/bus_center:dsoftbus_bus_center_server",
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
     "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
-    "$dsoftbus_root_path/core/common:dsoftbus_utils",
+    "$dsoftbus_root_path/core/common:softbus_utils",
     "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
     "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
     "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation:dsoftbus_trans_udp_channel",
@@ -66,14 +68,14 @@ if (defined(ohos_lite)) {
       include_dirs = common_include
       include_dirs += [ "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation/include" ]
       sources = [
+        "$dsoftbus_root_path/core/transmission/ipc/mini/trans_client_proxy.c",
+        "$dsoftbus_root_path/core/transmission/session/src/trans_session_manager.c",
+        "$dsoftbus_root_path/core/transmission/session/src/trans_session_service.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_manager.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_message.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_callback.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_manager.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_lane_manager.c",
-        "$dsoftbus_root_path/core/transmission/session/src/trans_session_manager.c",
-        "$dsoftbus_root_path/core/transmission/session/src/trans_session_service.c",
-        "$dsoftbus_root_path/core/transmission/ipc/mini/trans_client_proxy.c",
       ]
 
       public_configs = [ ":trans_session_interface" ]
@@ -88,24 +90,24 @@ if (defined(ohos_lite)) {
         "-fPIC",
       ]
       sources = [
+        "$dsoftbus_root_path/core/transmission/ipc/small/trans_client_proxy.c",
+        "$dsoftbus_root_path/core/transmission/session/src/trans_session_manager.c",
+        "$dsoftbus_root_path/core/transmission/session/src/trans_session_service.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_manager.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_message.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_callback.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_manager.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_lane_manager.c",
-        "$dsoftbus_root_path/core/transmission/session/src/trans_session_manager.c",
-        "$dsoftbus_root_path/core/transmission/session/src/trans_session_service.c",
-        "$dsoftbus_root_path/core/transmission/ipc/small/trans_client_proxy.c",
       ]
 
       public_configs = [ ":trans_session_interface" ]
       deps = common_deps
       deps += [
+        "$dsoftbus_root_path/core/frame/small/client_manager:client_manager",
         "$hilog_lite_deps_path",
         "//build/lite/config/component/cJSON:cjson_shared",
-        "//third_party/bounds_checking_function:libsec_shared",
         "//foundation/communication/ipc_lite:liteipc_adapter",
-        "$dsoftbus_root_path/core/frame/small/client_manager:client_manager",
+        "//third_party/bounds_checking_function:libsec_shared",
       ]
     }
   }
@@ -133,15 +135,15 @@ if (defined(ohos_lite)) {
       "//third_party/cJSON",
     ]
     sources = [
+      "$dsoftbus_root_path/core/transmission/ipc/standard/src/trans_client_proxy.cpp",
+      "$dsoftbus_root_path/core/transmission/ipc/standard/src/trans_client_proxy_standard.cpp",
+      "$dsoftbus_root_path/core/transmission/session/src/trans_session_manager.c",
+      "$dsoftbus_root_path/core/transmission/session/src/trans_session_service.c",
       "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_manager.c",
       "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_message.c",
       "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_callback.c",
       "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_manager.c",
       "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_lane_manager.c",
-      "$dsoftbus_root_path/core/transmission/session/src/trans_session_manager.c",
-      "$dsoftbus_root_path/core/transmission/session/src/trans_session_service.c",
-      "$dsoftbus_root_path/core/transmission/ipc/standard/src/trans_client_proxy.cpp",
-      "$dsoftbus_root_path/core/transmission/ipc/standard/src/trans_client_proxy_standard.cpp",
     ]
     public_configs = [ ":trans_session_interface" ]
     if (is_standard_system) {
@@ -158,13 +160,13 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
       "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
-      "$dsoftbus_root_path/core/common:dsoftbus_utils",
+      "$dsoftbus_root_path/core/common:softbus_utils",
+      "$dsoftbus_root_path/core/frame/standard/client_manager:client_manager",
       "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
       "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
       "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation:dsoftbus_trans_udp_channel",
-      "$dsoftbus_root_path/core/frame/standard/client_manager:client_manager",
-      "//utils/native/base:utilsecurec_shared",
       "//utils/native/base:utils",
+      "//utils/native/base:utilsecurec_shared",
     ]
     part_name = "dsoftbus_standard"
     subsystem_name = "communication"
