--- a/core/transmission/common/BUILD.gn
+++ b/core/transmission/common/BUILD.gn
@@ -33,7 +33,7 @@ if (defined(ohos_lite)) {
 
   common_deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
-    "$dsoftbus_root_path/core/common:dsoftbus_utils",
+    "$dsoftbus_root_path/core/common:softbus_utils",
     "$hilog_lite_deps_path",
     "$libsec_deps_path",
   ]
@@ -84,7 +84,7 @@ if (defined(ohos_lite)) {
     }
     public_deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
-      "$dsoftbus_root_path/core/common:dsoftbus_utils",
+      "$dsoftbus_root_path/core/common:softbus_utils",
     ]
     part_name = "dsoftbus_standard"
     subsystem_name = "communication"
