--- a/sdk/bus_center/service/BUILD.gn
+++ b/sdk/bus_center/service/BUILD.gn
@@ -47,7 +47,7 @@ if (defined(ohos_lite)) {
       ]
       deps = [
         "$dsoftbus_root_path/adapter:softbus_adapter",
-        "$dsoftbus_root_path/core/common:dsoftbus_utils",
+        "$dsoftbus_root_path/core/common:softbus_utils",
         "$dsoftbus_root_path/sdk/bus_center:dsoftbus_bus_center_manager_sdk",
         "$dsoftbus_root_path/sdk/frame:softbus_client_frame",
         "$hilog_lite_deps_path",
@@ -71,7 +71,7 @@ if (defined(ohos_lite)) {
     sources = [ "src/client_bus_center.c" ]
     deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
-      "$dsoftbus_root_path/core/common:dsoftbus_utils",
+      "$dsoftbus_root_path/core/common:softbus_utils",
       "$dsoftbus_root_path/sdk/bus_center:dsoftbus_bus_center_manager_sdk",
       "$dsoftbus_root_path/sdk/frame:softbus_client_frame",
     ]
