--- a/sdk/transmission/trans_channel/auth/BUILD.gn
+++ b/sdk/transmission/trans_channel/auth/BUILD.gn
@@ -21,7 +21,7 @@ if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
 
   common_deps = [
-    "$dsoftbus_root_path/core/common:dsoftbus_utils",
+    "$dsoftbus_root_path/core/common:softbus_utils",
     "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
     "$hilog_lite_deps_path",
   ]
@@ -71,7 +71,7 @@ if (defined(ohos_lite)) {
     sources = [ "src/client_trans_auth_manager.c" ]
     public_configs = [ ":trans_auth_channel_sdk_interface" ]
     deps = [
-      "$dsoftbus_root_path/core/common:dsoftbus_utils",
+      "$dsoftbus_root_path/core/common:softbus_utils",
       "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
     ]
     if (is_standard_system) {
