--- a/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/BUILD.gn
+++ b/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/BUILD.gn
@@ -60,7 +60,7 @@ source_set("libsoftbus_stream") {
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/components/nstackx_enhanced/fillp:Dstream",
-    "$dsoftbus_root_path/core/common:dsoftbus_utils",
+    "$dsoftbus_root_path/core/common:softbus_utils",
     "//third_party/bounds_checking_function:libsec_shared",
   ]
   deps += [ "$hilog_lite_deps_path" ]
