--- a/core/discovery/ble/BUILD.gn
+++ b/core/discovery/ble/BUILD.gn
@@ -19,14 +19,14 @@ if (enable_discovery_ble == false) {
 } else {
   sources_ble = [
     "src/disc_ble_utils.c",
-    "src/disc_ble.c"
+    "src/disc_ble.c",
   ]
   deps_ble = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/adapter/common/net/bluetooth:softbus_adapter_ble",
     "$dsoftbus_root_path/core/common/message_handler:message_handler",
     "$dsoftbus_root_path/core/common:softbus_core_common",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger"
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
   ]
 }
 
@@ -45,7 +45,7 @@ common_include = [
   "$dsoftbus_root_path/core/discovery/ble/include",
   "$dsoftbus_root_path/core/connection/interface",
   "$dsoftbus_root_path/core/connection/manager",
-  "//third_party/cJSON"
+  "//third_party/cJSON",
 ]
 
 if (defined(ohos_lite)) {
