--- a/core/connection/ble/BUILD.gn
+++ b/core/connection/ble/BUILD.gn
@@ -13,12 +13,32 @@
 
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
+if (enable_connection_ble == false) {
+  sources_ble = [ "src/softbus_ble_connection_virtual.c" ]
+  deps_ble = []
+} else {
+  sources_ble = [
+    "src/softbus_ble_connection.c",
+    "src/softbus_ble_trans_manager.c",
+  ]
+  deps_ble = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/adapter/common/net/bluetooth:softbus_adapter_ble",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
+    "$dsoftbus_root_path/core/common/json_utils:json_utils",
+    "$dsoftbus_root_path/core/common/log:softbus_log",
+    "$dsoftbus_root_path/core/common/message_handler:message_handler",
+    "$dsoftbus_root_path/core/common/queue:softbus_queue",
+    "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
+  ]
+}
+
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
 
   if (ohos_kernel_type == "liteos_m") {
     static_library("ble_connection") {
-      sources = [ "src/ble_connection_virtual.c" ]
+      sources = sources_ble
       include_dirs = [
         "include",
         "$dsoftbus_root_path/interfaces/kits/common",
@@ -26,11 +46,11 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/connection/interface",
         "$dsoftbus_root_path/core/connection/manager",
       ]
-      deps = []
+      deps = deps_ble
     }
   } else {
     shared_library("ble_connection") {
-      sources = [ "src/ble_connection_virtual.c" ]
+      sources = sources_ble
       include_dirs = [
         "include",
         "$dsoftbus_root_path/interfaces/kits/common",
@@ -38,21 +58,31 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/connection/interface",
         "$dsoftbus_root_path/core/connection/manager",
       ]
-      deps = []
+      deps = deps_ble
     }
   }
 } else {
   import("//build/ohos.gni")
 
   ohos_shared_library("ble_connection") {
-    sources = [ "src/ble_connection_virtual.c" ]
+    sources = sources_ble
     include_dirs = [
       "include",
+      "src",
+      "$dsoftbus_root_path/adapter/common/include",
+      "$dsoftbus_root_path/adapter/common/net/bluetooth/include",
       "$dsoftbus_root_path/interfaces/kits/common",
+      "$dsoftbus_root_path/interfaces/kits/bus_center",
       "$dsoftbus_root_path/core/common/include",
+      "$dsoftbus_root_path/core/bus_center/interface",
       "$dsoftbus_root_path/core/connection/interface",
       "$dsoftbus_root_path/core/connection/manager",
+      "$dsoftbus_root_path/core/connection/ble/include",
+      "$dsoftbus_root_path/core/common/message_handler/include",
+      "//third_party/cJSON",
     ]
+    deps = deps_ble
+    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
     part_name = "dsoftbus_standard"
     subsystem_name = "communication"
   }
