channel type set before ipc
Signed-off-by: Ted <wangruichang@huawei.com>

--- a/sdk/discovery/BUILD.gn
+++ b/sdk/discovery/BUILD.gn
@@ -77,6 +77,8 @@ if (defined(ohos_lite)) {
       "ipc/standard/include",
       "$dsoftbus_root_path/core/common/include",
       "$dsoftbus_root_path/core/frame/standard/server/include",
+      "$dsoftbus_root_path/core/transmission/common/include",
+      "$dsoftbus_root_path/interfaces/kits/transport",
       "//utils/system/safwk/native/include",
       "$softbus_adapter_common/include",
     ]
