--- a/adapter/common/bus_center/BUILD.gn
+++ b/adapter/common/bus_center/BUILD.gn
@@ -14,21 +14,17 @@
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 config("bus_center_monitor_interface") {
-  include_dirs = [
-    "include",
-    "$dsoftbus_root_path/interfaces/kits",
-    "$dsoftbus_root_path/interfaces/kits/bus_center",
-    "$dsoftbus_root_path/interfaces/kits/common",
-  ]
+  include_dirs = [ "include" ]
 }
-
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
   if (ohos_kernel_type == "liteos_m") {
     static_library("dsoftbus_bus_center_monitor") {
       sources = [
-        "src/lnn_event_monitor.c",
-        "src/lnn_lwip_monitor.c",
+        "network/lnn_lwip_monitor.c",
+        "network/lnn_netlink_monitor_virtual.c",
+        "platform/lnn_product_monitor_virtual.c",
+        "wlan/lnn_wifiservice_monitor_virtual.cpp",
       ]
       include_dirs = [
         "$dsoftbus_root_path/core/adapter/kernel/include",
@@ -53,9 +49,13 @@ if (defined(ohos_lite)) {
     }
   } else {
     shared_library("dsoftbus_bus_center_monitor") {
-      sources = [ "src/lnn_event_monitor.c" ]
       if (ohos_kernel_type == "linux") {
-        sources += [ "src/lnn_netlink_monitor.c" ]
+        sources = [
+          "network/lnn_lwip_monitor_virtual.c",
+          "network/lnn_netlink_monitor.c",
+          "platform/lnn_product_monitor_virtual.c",
+          "wlan/lnn_wifiservice_monitor_virtual.cpp",
+        ]
       }
       include_dirs = [
         "$softbus_adapter_common/include",
@@ -64,7 +64,12 @@ if (defined(ohos_lite)) {
         "$hilog_lite_include_path",
       ]
       if (ohos_kernel_type == "liteos_a") {
-        sources += [ "$dsoftbus_root_path/adapter/common/bus_center/platform/lnn_product_monitor.c" ]
+        sources = [
+          "network/lnn_lwip_monitor_virtual.c",
+          "network/lnn_netlink_monitor_virtual.c",
+          "platform/lnn_product_monitor.c",
+          "wlan/lnn_wifiservice_monitor_virtual.cpp",
+        ]
         include_dirs += [
           "//drivers/adapter/uhdf/posix/include",
           "//drivers/framework/include/utils",
@@ -101,23 +106,33 @@ if (defined(ohos_lite)) {
 
   ohos_shared_library("dsoftbus_bus_center_monitor") {
     sources = [
-      "src/lnn_event_monitor.c",
-      "src/lnn_netlink_monitor.c",
+      "network/lnn_lwip_monitor_virtual.c",
+      "network/lnn_netlink_monitor.c",
+      "platform/lnn_product_monitor_virtual.c",
+      "wlan/lnn_wifiservice_monitor.cpp",
     ]
     include_dirs = [
       "$softbus_adapter_common/include",
       "$dsoftbus_root_path/core/common/include",
       "//utils/native/base/include",
+      "//foundation/communication/wifi/interfaces/innerkits/native_cpp/wifi_standard/interfaces",
+      "//foundation/communication/wifi/services/wifi_standard/wifi_framework/common/net_helper",
     ]
     public_configs = [ ":bus_center_monitor_interface" ]
     deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
       "$dsoftbus_root_path/core/common/log:softbus_log",
+      "$dsoftbus_root_path/core/common/message_handler:message_handler",
+      "//foundation/aafwk/standard/interfaces/innerkits/want:want",
       "//utils/native/base:utils",
     ]
     if (is_standard_system) {
-      external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+      external_deps = [
+        "ces_standard:cesfwk_innerkits",
+        "hiviewdfx_hilog_native:libhilog",
+        "ipc:ipc_core",
+      ]
     }
     part_name = "dsoftbus_standard"
     subsystem_name = "communication"
