--- a/adapter/default_config/feature_config/small/config.gni
+++ b/adapter/default_config/feature_config/small/config.gni
@@ -19,8 +19,9 @@ declare_args() {
   enable_connection_br = false
   enable_connection_ble = false
 
-  enable_trans_udp = false
-  enable_trans_udp_file = false
+  enable_trans_udp = true
+  enable_trans_udp_stream = false
+  enable_trans_udp_file = true
   enable_auth_account = false
 
   enable_auto_networking = true
