--- a/sdk/transmission/trans_channel/udp/BUILD.gn
+++ b/sdk/transmission/trans_channel/udp/BUILD.gn
@@ -21,10 +21,7 @@ config("trans_udp_channel_sdk_interface") {
 }
 
 if (enable_trans_udp == true) {
-  common_src = [
-    "common/src/client_trans_udp_manager.c",
-    "stream/src/client_trans_stream.c",
-  ]
+  common_src = [ "common/src/client_trans_udp_manager.c" ]
 } else {
   common_src = [
     "common/src/client_trans_udp_virtual.c",
@@ -79,10 +76,16 @@ if (defined(ohos_lite)) {
       if (enable_trans_udp == true) {
         deps = [
           "$dsoftbus_root_path/core/connection/common:conn_common",
-          "stream/adaptor:dsoftbus_trans_dstream",
           "//third_party/bounds_checking_function:libsec_shared",
         ]
         deps += common_deps
+        if (enable_trans_udp_stream == true) {
+          sources += [ "stream/src/client_trans_stream.c" ]
+          deps += [ "stream/adaptor:dsoftbus_trans_dstream" ]
+        } else {
+          sources += [ "stream/src/client_trans_stream_virtual.c" ]
+        }
+
         if (enable_trans_udp_file == true) {
           sources += [
             "file/src/client_trans_file.c",
@@ -137,9 +140,14 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/common/utils:softbus_utils",
         "$dsoftbus_root_path/core/connection/common:conn_common",
         "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
-        "stream/adaptor:dsoftbus_trans_dstream",
         "//utils/native/base:utilsecurec_shared",
       ]
+      if (enable_trans_udp_stream == true) {
+        sources += [ "stream/src/client_trans_stream.c" ]
+        deps += [ "stream/adaptor:dsoftbus_trans_dstream" ]
+      } else {
+        sources += [ "stream/src/client_trans_stream_virtual.c" ]
+      }
       if (enable_trans_udp_file == true) {
         sources += [
           "file/src/client_trans_file.c",
