fixed 65d8618 from https://gitee.com/Xi_Yuhao/communication_dsoftbus/pulls/449 remove log
Signed-off-by: XiYuhao <xiyuhao@huawei.com>

--- a/adapter/common/net/bluetooth/BUILD.gn
+++ b/adapter/common/net/bluetooth/BUILD.gn
@@ -33,6 +33,7 @@ ohos_shared_library("softbus_adapter_ble") {
   ]
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/core/common/log:softbus_log",
     "//foundation/communication/bluetooth/interfaces/innerkits/native_cpp/framework:btframework",
     "//third_party/bounds_checking_function:libsec_static",
   ]
